fixed bug with image header text alignment

--- a/src/General/Components/PageHeaderImage.css
+++ b/src/General/Components/PageHeaderImage.css
@@ -9,8 +9,8 @@
   position: relative;
   width: 80vw;
   margin-top: 90px;
-  margin-left: auto;
-  margin-right: auto;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 
